# classificador_flores_iris

./: main.py  pyproject.toml
classificador_flores_iris/: classificador.py
tests/: test_classificador_flores_iris.py
